--- a/src/app/shared/components/delete-dialog/delete-dialog.component.html
+++ b/src/app/shared/components/delete-dialog/delete-dialog.component.html
@@ -5,7 +5,7 @@
     </app-button>
   </div>
   <header class="delete-dialog__header">
-    <mat-icon class="delete-dialog__icon">delete</mat-icon>
+    <mat-icon class="delete-dialog__icon" svgIcon="trash-new"></mat-icon>
   </header>
 
   <main class="delete-dialog__content">
