--- a/src/app/shared/components/records-table/records-table.component.html
+++ b/src/app/shared/components/records-table/records-table.component.html
@@ -62,8 +62,7 @@
       <mat-icon class="records-table__note-icon"
                 *ngIf="row.notes"
                 [matTooltip]="row.notes"
-                [matTooltipPosition]="'above'">
-        book
+                [matTooltipPosition]="'above'" svgIcon="bookmark-new">
       </mat-icon>
     </mat-cell>
   </ng-container>
