--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,6 +30,8 @@ html, body {
   &-settings,
   &-car,
   &-account,
+  &-notes,
+  &-feedback,
   &-delete {
     .mat-dialog-container {
       padding: 0;
