--- a/src/app/empty/empty.component.html
+++ b/src/app/empty/empty.component.html
@@ -1,6 +1,6 @@
 <div class="empty">
   <div class="empty__text">
-    <mat-icon class="empty__icon" svgIcon="list-rounded"></mat-icon>
+    <mat-icon class="empty__icon">inventory</mat-icon>
     <span>{{"PAGES.EMPTY.TEXT" | translate}}</span>
   </div>
 </div>
