--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -2,7 +2,7 @@
      [class.navigation--minimize]="(sideNavService.collapse$ | async)">
   <div class="navigation__title-container">
     <app-button button-primary (click)="onAdd(selectedTabIndex)">
-      <mat-icon>add</mat-icon>
+      <mat-icon svgIcon="add-new"></mat-icon>
       <span>{{(selectedTabIndex ? "MENU.CAR" : "MENU.CATEGORY" ) | translate}}</span>
     </app-button>
   </div>
