--- a/src/app/shared/components/print-dialog/print-dialog.component.scss
+++ b/src/app/shared/components/print-dialog/print-dialog.component.scss
@@ -7,6 +7,7 @@
   display: flex;
   height: 100%;
   width: 100%;
+  background: white;
 
   overflow: hidden;
   user-select: none;
@@ -17,6 +18,7 @@
 
   &__path {
     max-width: 244px;
+    font-size: 14px;
 
     overflow: hidden;
     text-overflow: ellipsis;
@@ -28,7 +30,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 12px;
+    padding: 8px 12px;
 
     &--small {
       padding: 4px 0px;
@@ -36,7 +38,7 @@
   }
 
   ubuntu-container {
-    margin-bottom: 24px;
+    margin-bottom: 12px;
 
     &:last-child {
       margin-bottom: 0;
@@ -52,12 +54,17 @@
 
   &__scroll {
     @include mixins.scrollable;
-    padding: 1px 1px 16px 1px;
+    height: 100%;
+    border-radius: 24px;
+    padding: 12px 24px;
+
+    background-color: $background-secondary;
+    box-shadow: inset 0px 1px 3px 1px rgb(0 0 0 / 6%);
   }
 
   &__divider {
-    margin: 0 24px;
-    border-right-color: $separator-color;
+    margin: 0 12px;
+    border-right-color: transparent;
   }
 
   &__preview-section {
@@ -67,6 +74,12 @@
   &__preview {
     width: 100%;
     height: 100%;
+
+    padding: 24px;
+    box-sizing: border-box;
+    background: $background-secondary;
+    border-radius: 24px;
+    box-shadow: inset 0px 1px 3px 1px rgb(0 0 0 / 6%);
   }
 
   &__content {
@@ -117,7 +130,6 @@
   max-width: 100%;
   min-height: 60px;
   display: block;
-  background: white;
   border-radius: 8px;
   overflow: hidden;
 
@@ -142,7 +154,7 @@
 
   &__name {
     width: 100%;
-    font-size: 15px;
+    font-size: 14px;
   }
 
   &__drag-icon {
@@ -150,7 +162,7 @@
     font-size: 20px;
     height: 20px;
     width: 20px;
-    color: gray;
+    color: $button-color-secondary;
     cursor: move;
   }
 
@@ -163,7 +175,7 @@
 
 .cdk-drag-preview {
   box-sizing: border-box;
-  border-radius: 8px;
+  border-radius: 24px !important;
   box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
               0 8px 10px 1px rgba(0, 0, 0, 0.14),
               0 3px 14px 2px rgba(0, 0, 0, 0.12);
@@ -205,9 +217,13 @@
 }
 
 .button__cancel {
-  background-color: rgb(75, 72, 72);
-  border-color: rgb(48,47,47);
-  color: #fff;
+  background-color: #f1f1f1;
+  border-color: transparent;
+  color: $font-primary;
+
+  &:hover {
+    background: rgba(0,0,0,0.05);
+  }
 }
 
 ::ng-deep .mat-checkbox-checked .mat-checkbox-background,
