--- a/src/app/shared/components/rich-widget/rich-widget.component.html
+++ b/src/app/shared/components/rich-widget/rich-widget.component.html
@@ -1,6 +1,6 @@
 <div class="rich-widget" [class.rich-widget--horizontal]="orientation === 'horizontal'">
   <mat-icon class="rich-widget__info" *ngIf="tooltip" [matTooltip]="tooltip | translate">info</mat-icon>
-  <mat-icon class="rich-widget__illustration">{{icon}}</mat-icon>
+  <mat-icon class="rich-widget__illustration" [svgIcon]="icon"></mat-icon>
   <div class="rich-widget__info-section">
     <span class="rich-widget__title">{{title | translate}}</span>
     <span class="rich-widget__value" [ngSwitch]="type">
